syntax = "proto3";
package protocol.Cluster;
import "Base.proto";
//import "User.proto";
option java_package = "com.z.ki.protobuf";
option go_package = "protocol";
option optimize_for = SPEED;

// cluster服务相关协议
// 服务主要用来收集各个服务器集群的信息
// 需要的信息为：
// 服务器类型
// 服务器IP
// 服务器端口
// 负载信息

// 请求操作类型
enum ClusterActionType{
	UNKNOWN     = 0; //go里面如果只传送单个枚举且枚举值是0的时候，通过 proto.Marshal 转换后的数据长度为0，所以这里也算是当作占位用
	REG_SERVER  = 1;
	GET_SERVERS = 2;
}


// 请求
message ClusterRequest{
	ClusterActionType act                 = 1;
	repeated Base.ServerInfo data       = 2;
	repeated Base.ServerType serverType = 3;
}

// 应答
message ClusterResponse{
	Base.Status status              = 1;
	repeated Base.ServerInfo data = 2;
}



