syntax = "proto3";
package Login;
import "Base.proto";
import "User.proto";
option java_package = "com.z.ki.protobuf";
option optimize_for = SPEED;


// 操作结果状态
enum Status{
    SUCCESS          = 0;
    FAIL		     = 1;
}


message LoginRequest{
	string user_name = 1;
	string password = 2;
	Base.ClientType client_type = 3;
	string client_version = 4;
}

message LoginResponse{
	Status status = 1;
	string message = 2;
	LoginData data = 3;
}

message LoginData{
	uint32 server_time = 1;
	User.Info user_info = 2;	
}


message LogoutRequest{
}

message LogoutResponse{
	Status status = 1;
	string message = 2;
}
